# edgar_analytics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_accuracy.yml  feature_request.yml
.github/workflows/: workflow.yml
docs/: ARCHITECTURE.md  METRICS_REFERENCE.md  USER_GUIDE.md
edgar_analytics/: __init__.py  cache.py  cli.py  company_facts.py  config.py  data_utils.py  forecasting.py  layout_strategy.py  logging_utils.py  market_data.py  metrics.py  models.py  multi_period_analysis.py  orchestrator.py  panel_layout.py  reporting.py  scores.py  synonyms.py  synonyms_utils.py
examples/: advanced_usage_example.py  cli_usage.md  custom_strategy_example.py  manual_metrics_example.py  multi_period_analysis_example.py  multi_ticker_example.py  single_ticker_example.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_company_facts.py  test_config.py  test_data_utils.py  test_forecasting.py  test_integration.py  test_layout.py  test_logging_utils.py  test_market_data.py  test_metrics.py  test_models.py  test_multi_period_analysis.py  test_orchestrator.py  test_reporting.py  test_scores.py  test_security.py  test_synonyms.py  test_synonyms_utils.py  test_v07_fixes.py  test_v102_fixes.py
