[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that take a long time (e.g. network calls)",
    "integration: marks tests that hit real EDGAR API (deselect with '-m \"not integration\"')",
]
